# carbon

./: .dockerignore  .env.example  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  crowdin.yml  docker-compose.yml  helpexample.txt  main.py  pyproject.toml  pyrightconfig.json  renovate.json  ruff.toml
.github/workflows/: ci.yml  crowdin_download.yml  crowdin_download_source.yml  crowdin_upload_source.yml  linting.yml
app/: bot.py  config.py
app/db/: session.py
app/db/cache/: guild_cache.py
app/db/models/: __init__.py  appeal_logs.py  appeal_settings.py  case_edits.py  case_logs.py  guild.py  guilds.py  mod_settings.py
app/db/services/: caselog_service.py  guild_service.py  modsettings_service.py
app/helpers/: check_target.py  constants.py  custom_tree.py  embed.py  embed_factory.py  enums.py  logging.py
app/helpers/consts/: perm_label.py
app/i18n/: context.py  manager.py  marker.py  translator.py
app/modules/commands/: developer.py  general.py  management.py  moderation.py
app/modules/listeners/: connections.py  guild_events.py  on_error.py
app/services/commands/: general.py  management.py  moderation.py
app/services/listeners/: connections.py  guild_events.py  on_error.py
app/ui/embeds/: error_embed.py  log_embeds.py
app/ui/views/: help_view.py  invite_view.py
app/utils/checks/: in_guild.py  not_bot.py
app/utils/confs/: enums.py
app/utils/consts/: branding.py
app/utils/core/: custom_tree.py  embed.py  redis.py
app/utils/helpers/: check_target.py  embed_factory.py  parse_time.py
locales/: messages.pot
locales/bg/LC_MESSAGES/: messages.po
locales/cs/LC_MESSAGES/: messages.po
locales/da/LC_MESSAGES/: messages.po
locales/de/LC_MESSAGES/: messages.po
locales/el/LC_MESSAGES/: messages.po
migrations/: env.py
migrations/versions/: 25efa97431df_.py  9011398b90c3_.py  932c4402c19d_.py  9ce207b65fed_.py  9fe2d189691a_.py  b61e7cbb20b0_.py  cf3a88de064a_.py  d260b19c5598_.py  d6f069ba9bdf_.py  d78a599755b0_.py  e044a8d8f805_.py
scripts/: fill_msgstr.py
tests/: conftest.py  test_db.py  test_i18n.py  test_parse_time.py  test_target_checker.py
(+36 files in other folders)
