[project]
name = "carbon"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayush Kumar",email = "ayush438500@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py (>=2.6.4,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "tortoise (>=0.1.1,<0.2.0)",
    "babel (>=2.18.0,<3.0.0)",
    "aerich (>=0.9.2,<0.10.0)",
    "pendulum (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
